Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -173,6 +173,7 @@ header {
     display: block;
     float: left;
     padding: 0;
+    width: 25%;
 }
 
 /* COMPANY NAME */
@@ -280,6 +281,7 @@ footer h4 {
     float: right;
     position: relative;
     margin: 16px 0 0;
+    width: 75%;
 }
 
 .widget.extendednavigation a.pull {
@@ -287,7 +289,6 @@ footer h4 {
 }
 
 .widget.extendednavigation ul {
-    float: left;
     margin: 0;
     padding: 0;
 }
